Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- triggering persistence in manage_setMethodThemes() when the method theme
  dictionary has been modified.
- fixed the CSS rendering of box corners when not all background images
  are specified. (#785)
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-